Automatization of models and reorganization

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ Untitled.ipynb
 xylella_detection_cnn.py 
 xylella_detection_nn.sh
 Xylella_detection_nn.ipynb
+Classification results
+Classification datasets
+ann_best_classifier.h5
